--- a/languages/Scala-scalatest/manifest.json
+++ b/languages/Scala-scalatest/manifest.json
@@ -1,11 +1,11 @@
 
 {
   "visible_filenames": [ "hiker.scala", "hiker_tests.scala", "cyber-dojo.sh" ],
-  "support_filenames": [ "scalatest_2.9.0-1.8.jar" ],
+  "support_filenames": [ "scalatest_2.11-2.2.4.jar" ],
   "unit_test_framework": "scala_test",
 
   "filename_extension" : ".scala",
   "display_name": "Scala, scalatest",
-  "image_name": "cyberdojo/scala-2.9.2_scalatest",
+  "image_name": "jstjohn/scala-2.11.5_scalatest",
   "tab_size": 4
 }
